src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  @apply text-xl font-normal text-primary leading-6;
  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;

  color-scheme: light dark;
  background-color: #242424;
}
html {
  scroll-behavior: smooth;
}

input,
textarea,
button,
select,
a {
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

@layer base {
  a {
    @apply text-primary cursor-pointer relative inline-block;
  }

  h1 {
    @apply text-3xl;
  }

  h2 {
    @apply text-2xl;
  }
  h3 {
    @apply text-xl;
  }
  h4 {
    @apply text-lg;
  }
}

@layer components {
  .link::after {
    transform: scale(1, 1);
    content: '';
    width: 100%;
    height: 2px;
    background: rgb(255, 255, 255);
    position: absolute;
    bottom: -7px;
    left: 0;
    transform: scaleX(0);
    transform-origin: left bottom;
    transition: transform 0.35s ease-out;
  }

  .link:hover::after {
    transform: scaleX(1);
    transform-origin: left bottom;
  }
  .btn {
    @apply uppercase text-base text-react-gray px-6 py-2;
  }

  .btn-primary {
    @apply bg-primary active:bg-secondary;
  }

  .heading {
    @apply flex justify-around my-5;
  }

  .card {
    @apply md:px-16 pb-6 pt-7 rounded-lg shadow-md shadow-zinc-700 bg-zinc-800 grow max-w-screen-lg;
  }
}

.divider {
  @apply mx-10 border-primary flex grow self-center max-w-2xl justify-start;
}

.loader {
  width: 48px;
  height: 48px;
  border: 5px solid #fff;
  border-bottom-color: transparent;
  border-radius: 50%;
  display: inline-block;
  box-sizing: border-box;
  animation: rotation 1s linear infinite;
}

@keyframes rotation {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

